# rust-aligned-allocations

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: alignment.rs  alloc_flags.rs  alloc_free.rs  alloc_result.rs  ffi.rs  lib.rs  memory.rs
src/alloc-madvise/: .gitignore  Cargo.toml
src/alloc-madvise/src/: ffi.rs  lib.rs  lib_extern.rs
src/allocate/: Cargo.toml
src/allocate/src/: alignment.rs  alloc_flags.rs  alloc_free.rs  alloc_result.rs  lib.rs  memory.rs
