[package]
name = "alloc-madvise"
version = "0.2.0-alpha"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
edition = "2021"
rust-version = "1.66"
build = "build.rs"

[profile.release]
lto = "fat"
codegen-units = 1
# strip = "symbols"

[lib]
name = "alloc_madvise"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.139"

[build-dependencies]
cbindgen = "0.24.3"
