[package]
name = "alloc-madvise"
version = "0.5.0"
description = "A memory allocator for creating large aligned chunks of memory"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
keywords = ["malloc", "madvise", "memory"]
categories = ["memory-management"]
homepage = "https://github.com/sunsided/rust-aligned-allocations"
repository = "https://github.com/sunsided/rust-aligned-allocations"
readme = "README.md"
edition = "2021"
rust-version = "1.74"
license = "EUPL-1.2"
build = "build.rs"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[features]
default = ["ffi"]

# Enables the generation of FFI bindings.
ffi = ["dep:cbindgen"]

[lib]
name = "alloc_madvise"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
libc = "0.2.167"

[build-dependencies]
cbindgen = { version = "0.27.0", optional = true }
