[package]
name = "alloc-madvise"
version = "0.1.0"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "alloc_madvise"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.80"
allocate = { path = "../allocate" }
git-version = "0.3.4"

[build-dependencies]
cbindgen = "0.15.0"
