[package]
name = "alloc-madvise"
version = "0.2.0-alpha"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
edition = "2018"
build = "build.rs"

[profile.release]
lto = "fat"
codegen-units = 1
# strip = "symbols"

[lib]
name = "alloc_madvise"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.80"
allocate = { path = "../allocate" }
git-version = "0.3.4"

[build-dependencies]
cbindgen = "0.15.0"
